--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,71 @@
 body{
-  background-color: steelblue;
+  background-color: rgb(19, 19, 19);
+  color: white;
+  
+}
+ul{
+  list-style: none;
+}
+.App{
+  text-align: center;
+  padding-bottom: 10%;
+}
+
+.imgPrincipal{
+  width: 100%;
 }
 
 .targetRicks{
+  width: 80%;
+display: inline-block;
+  background-color:rgb(38, 38, 38);
+  border-radius:10px;
+  text-align: center;
+}
+
+.contentarget{
+  background-color: yellowgreen;
+border-top-left-radius:50px ;
+ border-top-right-radius: 50px;
+}
+
+/* .dimencionLista{
   
+} */
+
+.individual{
+  width:25%;
+  background-color: rgb(77, 77, 77);
+  display:inline-block;
+  margin:1%;
+  padding:10px;
+  border-radius: 10px;
+}
+.imgIndividual{
+  width: 80%;
+}
+.textInd{
+  text-align: start;
+}
+
+.contenStatus{
+ 
+  display: flex;
+  width: 80%;
+  margin-left: 15%;
+ 
+}
+p{ position: relative;
+  
+  display: inline-block;
+}
+.circleStatus{
+  position: absolute;
+  top:30%;
+  right: -100%;
+  display:inline-block;
+  background-color: greenyellow;
+  width: 10px;
+  height:10px;
+  border-radius: 50%;
 }
