--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width:700px) {
+.individual{
+ 
+  font-weight:lighter;
+  width:65%;
+}  
+
+.individual h2{
+  color: steelblue;
+  font-weight: 500;
+}
+}
